corrected H1 alignment

--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,7 @@ h1 {
   margin-left: 700px;
   margin: 0px;
   padding: 0px;
-  font-size: 60px;
+  font-size: 64px;
 }
 
 h2 {
